feat(rpc): is inbox message delivered endpoint
